--- a/pages/search/index.html
+++ b/pages/search/index.html
@@ -16,7 +16,7 @@
 
         <!-- 返回 -->
         <div class="page-search-back">
-            <img class="page-search-back-icon" :src="imgs.left" alt="back">
+            <img class="page-search-back-icon" :src="imgs.left" alt="back" @click="back">
             <img class="page-search-back-logo" :src="imgs.logo" alt="logo">
         </div>
 
