--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <p>QQ号：<span class="zaax-wxh" id="wechatAccount"></span></p>
 <p>扫码联系微信（频繁请刷新页面）领取体验金</p>
 
-<span  onclick="linkQQ()" class="db tcBtn public-name" id="download">访问QQ</span>
+<span  onclick="linkQQ()" class="db tcBtn public-name" id="download">访问QQ2</span>
 <i onclick="closetc()"></i>
 
 </div>
