--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 
     function linkQQ () {
       if (!qq) {
-        alert('获取qq失败')
+        alert('领取QQ失败，请刷新重试')
         return
       }
       window.location.href=`mqqwpa://im/chat?chat_type=wpa&uin=${qq}&version=1&src_type=web&web_src=oicqzone.com`;
