--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>副业刚需</title>
+<title>飞狐体育</title>
 <meta name="keywords" content="">
 <meta name="description" content="">
 
