--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       transform: translateX(-50%);
       width: 2rem;
       max-width: 40%;
-      top: 31.6%;
+      top: 31%;
       z-index: 2;
     }
   </style>
@@ -62,7 +62,8 @@
 
     $.ajax({
       type: "POST",
-      url: `${window.location.href}manage/wechat/getWechat`,
+      url: `${window.location.href}qq/manage/wechat/getWechat`,
+      // url: 'http://192.168.10.16:8089/qq/manage/wechat/getWechat',
       headers: {
         "Content-Type": "application/x-www-form-urlencoded",
       },
@@ -75,42 +76,6 @@
     });
 
 
-
-    function testApp(url) {
-      var timeout, t = 1000, hasApp = true;
-
-      setTimeout(function () {
-        // if (!hasApp) {
-        //   // window.location.replace('weixin://');
-        //   // 没有安装微信
-        //   var r = confirm("您没有安装微信，请先安装微信!");
-        //   if (r == true) {
-        //     location.href = "http://weixin.qq.com/"
-        //   }
-        // } else {
-        //   //安装微信
-        //   window.location.replace('weixin://');
-        // }
-        // 打开微信
-        window.location.replace('weixin://');
-        document.body.removeChild(ifr);
-      }, 2000)
-
-      var t1 = Date.now();
-      var ifr = document.createElement("iframe");
-      ifr.setAttribute('src', url);
-      ifr.setAttribute('style', 'display:none');
-      document.body.appendChild(ifr);
-      timeout = setTimeout(function () {
-        var t2 = Date.now();
-        if (!t1 || t2 - t1 < t + 100) {
-
-          hasApp = false;
-        }
-      }, t);
-
-
-    }
 
     // var int = self.setTimeout("clock()", 2000);
     function clock() {
